tests/ui/errors/snapshots/parse_attribute_inside_function_body.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Attribute not supported on target
   ╭─[test.lis:5:3]
 4 │ 
 5 │   #[iterate]
   ·   ─────┬────
   ·        ╰── nothing here can carry an attribute
 6 │   let result = match command {
   ╰────
  help: Remove the attribute, or move it onto an enum, struct, or function · code: [parse.misplaced_attribute]
