tests/ui/errors/snapshots/parse_attribute_on_unsupported_declaration.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Attribute not supported on target
   ╭─[test.lis:2:1]
 1 │ 
 2 │ #[iterate]
   · ─────┬────
   ·      ╰── nothing here can carry an attribute
 3 │ interface Service {
   ╰────
  help: Remove the attribute, or move it onto an enum, struct, or function · code: [parse.misplaced_attribute]
